change images path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <tr>
               <td class="header">
-                <img src="../images/header.png" alt="Header Logo">
+                <img src="images/header.png" alt="Header Logo">
                 <p><a href="#">Kliknij tutaj, jeśli masz problem z odczytaniem tej wiadomości.</a></p>
                 <h1>Zdrowo wybrałeś!</h1>
               </td> <!-- header -->
@@ -21,7 +21,7 @@
 
             <tr>
               <td class="orderNo">
-                <img src="../images/Kciuk_01.gif" alt="Thumb Gif">
+                <img src="images/Kciuk_01.gif" alt="Thumb Gif">
                 <p>Zarejestrowaliśmy Twój zakup z dużą przyjennością. Szykujemy już dla Ciebie zdrowe, zbilansowane posiłki, a Ty gotuj się na zdrowie i więcej czasu dla siebie!</p>
                 <p>
                   <span>Numer zamówienia: </span>2637n-273
@@ -54,7 +54,7 @@
                 <table>
                   <tr>
                     <td class="vegeImg">
-                      <img src="../images/vegetable.png" alt="vegetable">
+                      <img src="images/vegetable.png" alt="vegetable">
                     </td>
                     <td class="caloriesValues">
                       <p><span>Kaloryczność: </span>2000kcal</p>
@@ -103,7 +103,7 @@
                 <table>
                   <tr>
                     <td class="foodImg">
-                      <img src="../images/food.png" alt="food">
+                      <img src="images/food.png" alt="food">
                     </td>
                     <td class="doYouKnow">
                       <h2>Czy wiesz, że...</h2>
@@ -120,21 +120,21 @@
                 <table class="media">
                   <tr>
                     <td>
-                      <a href="#"><img src="../images/facebook.png" alt="facebook"></a>
-                      <a href="#"><img src="../images/instagram.png" alt="instagram"></a>
-                      <a href="#"><img src="../images/twitter.png" alt="twitter"></a>
-                      <a href="#"><img src="../images/google.png" alt="google"></a>
-                      <a href="#"><img src="../images/youtube.png" alt="youtube"></a>
-                      <a href="#"><img src="../images/linkedin.png" alt="linkedin"></a>
-                      <a href="#"><img src="../images/pinterest.png" alt="pinterest"></a>
+                      <a href="#"><img src="images/facebook.png" alt="facebook"></a>
+                      <a href="#"><img src="images/instagram.png" alt="instagram"></a>
+                      <a href="#"><img src="images/twitter.png" alt="twitter"></a>
+                      <a href="#"><img src="images/google.png" alt="google"></a>
+                      <a href="#"><img src="images/youtube.png" alt="youtube"></a>
+                      <a href="#"><img src="images/linkedin.png" alt="linkedin"></a>
+                      <a href="#"><img src="images/pinterest.png" alt="pinterest"></a>
                     </td>
                   </tr>
                 </table>
                 <table class="certificates">
                   <tr>
                     <td>
-                      <img src="../images/tuv.png" alt="tuv">
-                      <img src="../images/sth.png" alt="sth">
+                      <img src="images/tuv.png" alt="tuv">
+                      <img src="images/sth.png" alt="sth">
                     </td>
                   </tr>
                 </table>
